--- a/android/gradle/flutter_paystack/build.gradle
+++ b/android/gradle/flutter_paystack/build.gradle
@@ -1,46 +1,20 @@
-group 'co.paystack.flutterpaystack'
-version '1.0-SNAPSHOT'
-
-buildscript {
-    ext.kotlin_version = '1.7.20'
-    repositories {
-        mavenCentral()
-        google()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.0-rc02' // Consider using stable version if possible
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android' // Include this if you are using Kotlin
 }
-
-rootProject.allprojects {
-    repositories {
-        mavenCentral()
-        google()
-    }
-}
-
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 32 // Consider updating to the latest stable version
-    namespace "co.paystack.flutterpaystack" // This should match your package in AndroidManifest.xml
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin' // This allows for Kotlin source files
-    }
+    namespace 'co.paystack.flutterpaystack' // Make sure this is defined
+    compileSdkVersion 33 // Ensure this is set to the latest version
+
     defaultConfig {
-        minSdkVersion 16 // Make sure this aligns with your library's requirements
-        targetSdkVersion 32 // It's good practice to specify this
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        versionCode 21 // Consider following semantic versioning
-        versionName "3.0.10"
-    }
-    lintOptions {
-        disable 'InvalidPackage' // Ensure you understand why you're disabling this lint check
+        minSdkVersion 21 // Adjust as needed
+        targetSdkVersion 33 // Adjust as needed
+        versionCode 1
+        versionName "1.0"
     }
 }
+
 
 dependencies {
     implementation 'com.google.android.material:material:1.7.0' // Consider specifying a version that suits your library's compatibility
